# ispctest

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: ispctest.cpp  kernel.ispc
